; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_preshader.c_is_param_eval_input_dirty.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_preshader.c_is_param_eval_input_dirty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3dx_param_eval = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_param_eval_input_dirty(%struct.d3dx_param_eval* %0, i32 %1) #0 {
  %3 = alloca %struct.d3dx_param_eval*, align 8
  %4 = alloca i32, align 4
  store %struct.d3dx_param_eval* %0, %struct.d3dx_param_eval** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.d3dx_param_eval*, %struct.d3dx_param_eval** %3, align 8
  %6 = getelementptr inbounds %struct.d3dx_param_eval, %struct.d3dx_param_eval* %5, i32 0, i32 1
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %4, align 4
  %9 = call i64 @is_const_tab_input_dirty(i32* %7, i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %17, label %11

11:                                               ; preds = %2
  %12 = load %struct.d3dx_param_eval*, %struct.d3dx_param_eval** %3, align 8
  %13 = getelementptr inbounds %struct.d3dx_param_eval, %struct.d3dx_param_eval* %12, i32 0, i32 0
  %14 = load i32, i32* %4, align 4
  %15 = call i64 @is_const_tab_input_dirty(i32* %13, i32 %14)
  %16 = icmp ne i64 %15, 0
  br label %17

17:                                               ; preds = %11, %2
  %18 = phi i1 [ true, %2 ], [ %16, %11 ]
  %19 = zext i1 %18 to i32
  ret i32 %19
}

declare dso_local i64 @is_const_tab_input_dirty(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
